fix: hero video object-position to left bottom to center laser action on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -987,7 +987,7 @@ input:focus, textarea:focus, select:focus {
   }
 
   .hero-video {
-    object-position: 20% 85%;
+    object-position: 0% 100%;
   }
 
   .hero-title {
